# FashionMNISTmodel

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  dataset.py  earlystopping.py  model.py  pyproject.toml  test_model.py  train_model.py
models/: readme.txt
